--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     </div>
     <div style="display:inline-block">
       <div style="font-size: 0px">
-        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="あ">
-        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="い">
-        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="う">
-        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="え">
-        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="お">
+        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="あ/ア">
+        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="い/イ">
+        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="う/ウ">
+        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="え/エ">
+        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="お/オ">
         <input type='button' class="btn1" value="" disabled='true'>
         <input type='button' class="btn1" value="" disabled='true'>
         <input type='button' class="btn1" value="" disabled='true'>
@@ -44,47 +44,47 @@
         <input type='button' class="btn1" value="" disabled='true'>
       </div>
       <div style="font-size: 0px">
-        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="か">
-        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="き">
-        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="く">
-        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="け">
-        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="こ">
-        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="が">
-        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="ぎ">
-        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="ぐ">
-        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="げ">
-        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="ご">
+        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="か/カ">
+        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="き/キ">
+        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="く/ク">
+        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="け/ケ">
+        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="こ/コ">
+        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="が/ガ">
+        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="ぎ/ギ">
+        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="ぐ/グ">
+        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="げ/ゲ">
+        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="ご/ゴ">
       </div>
       <div style="font-size: 0px">
-        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="さ">
-        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="し">
-        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="す">
-        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="せ">
-        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="そ">
-        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="ざ">
-        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="じ">
-        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="す">
-        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="ぜ">
-        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="ぞ">
+        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="さ/サ">
+        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="し/シ">
+        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="す/ス">
+        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="せ/セ">
+        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="そ/ソ">
+        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="ざ/ザ">
+        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="じ/ジ">
+        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="ず/ズ">
+        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="ぜ/ゼ">
+        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="ぞ/ゾ">
       </div>
       <div style="font-size: 0px">
-        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="た">
-        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="ち">
-        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="つ">
-        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="て">
-        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="と">
-        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="だ">
-        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="ぢ">
-        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="づ">
-        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="で">
-        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="ど">
+        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="た/タ">
+        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="ち/チ">
+        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="つ/ツ">
+        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="て/テ">
+        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="と/ト">
+        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="だ/ダ">
+        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="ぢ/ヂ">
+        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="づ/ヅ">
+        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="で/デ">
+        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="ど/ド">
       </div>
       <div style="font-size: 0px">
-        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="な">
-        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="に">
-        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="ぬ">
-        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="ね">
-        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="の">
+        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="な/ナ">
+        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="に/ニ">
+        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="ぬ/ヌ">
+        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="ね/ネ">
+        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="の/ノ">
         <input type='button' class="btn1" value="" disabled='true'>
         <input type='button' class="btn1" value="" disabled='true'>
         <input type='button' class="btn1" value="" disabled='true'>
@@ -92,57 +92,54 @@
         <input type='button' class="btn1" value="" disabled='true'>
       </div>
       <div style="font-size: 0px">
-        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="は">
-        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="ひ">
-        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="ふ">
-        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="へ">
-        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="ほ">
-        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="ば">
-        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="び">
-        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="ぶ">
-        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="べ">
-        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="ぼ">
+        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="は/ハ">
+        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="ひ/ヒ">
+        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="ふ/フ">
+        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="へ/ヘ">
+        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="ほ/ホ">
+        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="ば/バ">
+        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="び/ビ">
+        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="ぶ/ブ">
+        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="べ/ベ">
+        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="ぼ/ボ">
       </div>
       <div style="font-size: 0px">
-        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="ま">
-        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="み">
-        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="む">
-        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="め">
-        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="も">
-        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="ぱ">
-        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="ぴ">
-        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="ぷ">
-        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="ぺ">
-        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="ぽ">
+        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="ま/マ">
+        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="み/ミ">
+        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="む/ム">
+        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="め/メ">
+        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="も/モ">
+        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="ぱ/パ">
+        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="ぴ/ピ">
+        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="ぷ/プ">
+        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="ぺ/ペ">
+        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="ぽ/ポ">
       </div>
       <div style="font-size: 0px">
-        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="や">
+        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="や/ヤ">
         <input type='button' class="btn2" value="" disabled='true'>
-        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="ゆ">
+        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="ゆ/ユ">
         <input type='button' class="btn2" value="" disabled='true'>
-        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="よ">
-        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="わ">
+        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="よ/ヨ">
+        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="わ/ワ">
         <input type='button' class="btn2" value="" disabled='true'>
-        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="を">
+        <input type='button' class="btn2" onclick="giveKanaInput(this)" value="を/ヲ">
         <input type='button' class="btn2" value="" disabled='true'>
         <input type='button' class="btn2" value="" disabled='true'>
       </div>
       <div style="font-size: 0px">
-        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="ら">
-        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="り">
-        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="る">
-        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="れ">
-        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="ろ">
+        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="ら/ラ">
+        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="り/リ">
+        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="る/ル">
+        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="れ/レ">
+        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="ろ/ロ">
         <input type='button' class="btn1" value="" disabled='true'>
         <input type='button' class="btn1" value="" disabled='true'>
-        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="ん" disabled='true'>
+        <input type='button' class="btn1" onclick="giveKanaInput(this)" value="ん/ン" disabled='true'>
         <input type='button' class="btn1" value="" disabled='true'>
         <input type='button' class="btn1" value="" disabled='true'>
       </div>
     </div>
-    <h4>平：あいうえお かきくけこ さしすせそ たちつてと なにぬねの はひふへほ まみむめも やゆよ らりるれろ わを がぎぐげご ばびぶべぼ ぱぴぷぺぽ だぢづでど んじずぞ</h4>
-    <h4>片：アイウエオ カキクケコ サシスセソ タチツテト ナニヌネノ ハヒフヘホ マミムメモ ヤユヨ ラリルレロ ワヲ ガギグゲゴ バビブベボ パピプペポ ダヂヅデド ンジズゾ</h4>
-
   </div>
   <div id="answer">
     <div style="display: inline-block; vertical-align: top;">
