--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <input type="button" id="btn-save" value="确认" onclick="btnInit()">
       </div>
       <div style="display:inline-block">
-        <h3>输入单词对应的假名可以点亮图鉴</h3>
+        <h3>输入单词对应的假名以点亮图鉴</h3>
         <textarea class="form-control" id="addword" placeholder="例：キョウカ ノゾミ　コッコロ" rows="5" cols="30" required></textarea>
         <input type="button" id="btn-save" value="确认" onclick="btnAdd()">
         <h3>存档</h3>
