--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <img src=css/yui.jpg class="img">
     </div>
     <div style="display:inline-block">
-      <h3>点假名开始新一局游戏（默认为全部单词未点亮）</h3>
+      <h3>点假名开始新一局游戏（无存档时默认为全部单词未点亮）</h3>
       <div style="font-size: 0px">
         <input type='button' class="btn1" onclick="giveKanaInput(this)" value="あ/ア">
         <input type='button' class="btn1" onclick="giveKanaInput(this)" value="い/イ">
