--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 <body>
   <div id="header">
     <h1>一个顶俩</h1>
+    <ul>
+      <li>高评分=下回合有New的概率更高，New的数量更多（并非最终选到的概率，因为九宫格刷词规律未知）</li>
+      <li>评分为0仅意味着下回合没有New，不代表是错误的选择</li>
+      <li>休闲游戏心态第一</li>
+    </ul>
   </div>
   <div style="display:inline-block">
     <div id="save" style="display:inline-block">
