--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 
 <body>
   <div id="header">
-    <h1>一个顶俩</h1>
+    <h1>一个顶俩v0.1</h1>
     <ul>
       <li>高评分=下回合有New的概率更高，New的数量更多（并非最终选到的概率，因为九宫格刷词规律未知）</li>
-      <li>评分为0仅意味着下回合没有New，不代表是错误的选择</li>
+      <li>预测只有一回合，在剩余词数较少时效果可能不佳，请结合其他攻略食用</li>
+      <li>加了一回合预测，另外做了一点小改动，单开一个网页测试效果。有兴趣的<a href="test.html">点这里</a></li>
       <li>休闲游戏心态第一</li>
     </ul>
   </div>
