--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <div id="header">
     <h1>一个顶俩v0.1</h1>
     <ul>
-      <li>高评分=下回合有New的概率更高，New的数量更多（并非最终选到的概率，因为九宫格刷词规律未知）</li>
-      <li>预测只有一回合，在剩余词数较少时效果可能不佳，请结合其他攻略食用</li>
-      <li>加了一回合预测，另外做了一点小改动，单开一个网页测试效果。有兴趣的<a href="test.html">点这里</a></li>
-      <li>休闲游戏心态第一</li>
+      <li>高评分=下回合有New的概率更高，New的数量更多（不代表实际概率）</li>
+      <li>预测深度较低，在剩余词数较少时效果可能不佳，请结合其他攻略食用</li>
+      <li>单开一个页面测试增加预测深度。有兴趣的<a href="test.html">点这里</a></li>
+      <li>休闲游戏心态第一。反馈帖请戳<a href="https://bbs.nga.cn/read.php?tid=19152993">这里</a></li>
     </ul>
   </div>
   <div style="display:inline-block">
