--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@
       <li>测试页面</li>
       <li>加深了预测，现在评分有两个数字，第一个和下回合出现New的概率挂钩，第二个和下下回合出现New的概率挂钩（数值不代表实际概率）</li>
       <li><a href="index.html">点这里</a>返回之前的页面</li>
-      <li>休闲游戏心态第一</li>
+      <li>休闲游戏心态第一。反馈帖请戳<a href="https://bbs.nga.cn/read.php?tid=19152993">这里</a></li>
     </ul>
   </div>
   <div style="display:inline-block">
