--- a/test.html
+++ b/test.html
@@ -12,10 +12,10 @@
   <div id="header">
     <h1>一个顶俩V0.2</h1>
     <ul>
-      <li>测试页面</li>
-      <li>加深了预测，现在评分有两个数字，第一个和下回合出现New的概率挂钩，第二个和下下回合出现New的概率挂钩（数值不代表实际概率）</li>
-      <li><a href="index.html">点这里</a>返回之前的页面</li>
-      <li>休闲游戏心态第一。反馈帖请戳<a href="https://bbs.nga.cn/read.php?tid=19152993">这里</a></li>
+      <li>测试页面。<a href="index.html">点这里</a>返回之前的页面</li>
+      <li>评分数字越大，代表之后选到New的概率越高，第一个数优先（测试用，仅供参考，数字不等于实际概率）</li>
+      <li>优化了推荐策略，现在深度最大4回合（例如仅剩单词ソルト（盐）时可以得到ようせい（精灵）->いなほ（稻穗）->ほし（星星）->シーソー（跷跷板）->ソルト（盐），カカオ（可可）->おかし（零食）->シーソー->ソルト等多条路径）</li>
+      <li>反馈帖请戳<a href="https://bbs.nga.cn/read.php?tid=19152993">这里。</a>休闲游戏心态第一</li>
     </ul>
   </div>
   <div style="display:inline-block">
