--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@
       <li>测试页面。<a href="index.html">点这里</a>返回之前的页面</li>
       <li>评分数字越大，代表之后选到New的概率越高，第一个数优先（测试用，仅供参考，数字不等于实际概率）</li>
       <li>优化了推荐策略，现在深度最大4回合（例如仅剩单词ソルト（盐）时可以得到ようせい（精灵）->いなほ（稻穗）->ほし（星星）->シーソー（跷跷板）->ソルト（盐），カカオ（可可）->おかし（零食）->シーソー->ソルト等多条路径）</li>
-      <li>反馈帖请戳<a href="https://bbs.nga.cn/read.php?tid=19152993">这里。</a>休闲游戏心态第一</li>
+      <li>休闲游戏心态第一。反馈帖请戳<a href="https://bbs.nga.cn/read.php?tid=19152993">这里</a></li>
     </ul>
   </div>
   <div style="display:inline-block">
