--- a/index.html
+++ b/index.html
@@ -9,35 +9,59 @@
 </head>
 
 <body>
-  <div id="header">
-    <h1>一个顶俩v0.1</h1>
-    <ul>
-      <li>高评分=下回合有New的概率更高，New的数量更多（不代表实际概率）</li>
-      <li>预测深度较低，在剩余词数较少时效果可能不佳，请结合其他攻略食用</li>
-      <li>单开一个页面测试增加预测深度。有兴趣的<a href="test.html">点这里</a></li>
-      <li>休闲游戏心态第一。反馈帖请戳<a href="https://bbs.nga.cn/read.php?tid=19152993">这里</a></li>
-    </ul>
-  </div>
   <div style="display:inline-block">
-    <div id="save" style="display:inline-block">
+    <h1 style="display: inline-block;">一个顶俩V0.3</h1>
+    <div style="display: inline-block;">历史版本：<a href="history/1.html">v0.1</a> <a href="history/2.html">v0.2</a>
+      帮助兼反馈帖<a href="https://bbs.nga.cn/read.php?tid=19152993">戳这里</a></div>
+
+    <div id="save">
       <div>
         <h3 id="remain">输入未点亮图鉴的单词编号，以空格隔开，输入完毕后点确认</h3>
-        <textarea class="form-control" id="initword" placeholder="例：1 2 3 5 8 13 21 34 55 89 144 233" rows="5" cols="80"
+        <textarea class="form-control" id="initword" placeholder="例：1 2 3 5 8 13 21 34 55 89 144 233" rows="4" cols="80"
           required></textarea>
-        <input type="button" id="btn-save" value="确认" onclick="btnInit()">
+        <input type="button" id="btn-save" value="确认" onclick="readWord()">
+        <input type="button" id="btn-reset" value="重置" onclick="Reset(1)">
+        <input type="button" id="btn-reset" value="清空" onclick="Reset(0)">
       </div>
-      <div style="display:inline-block">
-        <h3>输入单词对应的假名可以点亮图鉴</h3>
-        <textarea class="form-control" id="addword" placeholder="例：キョウカ ノゾミ　コッコロ" rows="5" cols="30" required></textarea>
-        <input type="button" id="btn-save" value="确认" onclick="btnAdd()">
-        <h3>存档</h3>
-        <textarea class="form-control" id="showword" placeholder="现在是空的" rows="3" cols="30" required></textarea>
-        <input type="button" id="btn-save" value="加载" onclick="btnSave()">
+      <div>
+        <h3>存档（自动保存）</h3>
+        <textarea class="form-control" id="showword" placeholder="现在是空的" rows="2" cols="80" required></textarea>
+        <input type="button" id="btn-save" value="加载" onclick="readSaveFile()">
       </div>
-      <img src=css/yui.jpg class="img">
+      <div>
+        <h3>单词狙击（输入编号，以空格隔开，提升对应假名开头单词的评分）</h3>
+        <textarea class="form-control" id="targetwords" placeholder="例：37 394" rows="1" cols="80" required></textarea>
+        <input type="button" id="btn-save" value="确认" onclick="setTargetWords()">
+        <input type="button" id="btn-save" value="清空" onclick="clearTargetWords()">
+      </div>
     </div>
-    <div style="display:inline-block">
-      <h3>点假名开始新一局游戏（默认为全部单词未点亮）</h3>
+    <div>
+      <h3 id="setting">设置（下次操作生效）</h3>
+      <label>启用评分</label>
+      <select id="rate_setting" onchange="setRate(this)">
+        <option value="1">是</option>
+        <option value="0">否</option>
+      </select>
+      <label>显示设置</label>
+      <select id="display_setting" onchange="setDisplay(this)">
+        <option value="0">标准</option>
+        <option value="1">仅显示图片和单词</option>
+        <option value="2">仅显示图片</option>
+      </select>
+      <label>深度</label>
+      <select id="rate_depth" onchange="setDepth(this)">
+        <option value="4">2回合</option>
+        <option value="2">1回合</option>
+      </select>
+      <label>优先级</label>
+      <select id="rate_priority" onchange="setPriority(this)">
+        <option value="0">标准</option>
+        <option value="1">我方回答优先</option>
+        <option value="2">对方回答优先</option>
+      </select>
+      <br>
+    </div>
+    <div style="display:inline-block; margin-top:15px;">
       <div style="font-size: 0px">
         <input type='button' class="btn1" onclick="giveKanaInput(this)" value="あ/ア">
         <input type='button' class="btn1" onclick="giveKanaInput(this)" value="い/イ">
@@ -148,21 +172,23 @@
       </div>
     </div>
   </div>
-  <div id="answer">
+  <div id="answer" style="display:inline-block;vertical-align: top">
     <div style="display: inline-block; vertical-align: top;">
+      <h5 id='dd_myself' style="color: white">到你了弟弟（tips:点图标接龙）</h5>
       <h3>你的回答</h3>
-      <h5 id='dd_myself' style="color: white">到你了弟弟</h5>
+
       <div id="answer_myself"></div>
     </div>
     <div style="display: inline-block; vertical-align: top;">
-      <h3>对方的回答</h3>
       <h5 id='dd_opponent' style="color: white">到你了弟弟</h5>
+      <h3>对方的回答</h3>
+
       <div id="answer_opponent"></div>
     </div>
   </div>
 
-  <script src="js/main.js"></script>
-  <script src="js/predict.js"></script>
+  <script src="js/data.js"></script>
+  <script src="js/test.js"></script>
 </body>
 
 </html>
