--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>一个顶俩</title>
-  <link rel="stylesheet" type="text/css" href="css/pcr.css">
+  <link rel="stylesheet" type="text/css" href="css/pcr3.css">
   <style id="pic-style"></style>
 </head>
 
