add display option - only show recommend rates

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <option value="0">标准</option>
         <option value="1">仅显示图片和单词</option>
         <option value="2">仅显示图片</option>
+        <option value="3">仅显示评分</option>
       </select>
       <label>深度</label>
       <select id="rate_depth" onchange="setDepth(this)">
