change default option

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
       </select>
       <label>优先级</label>
       <select id="rate_priority" onchange="setPriority(this)">
-        <option value="0">标准</option>
         <option value="1">我方回答优先</option>
         <option value="2">对方回答优先</option>
+        <option value="0">同等（回合数优先）</option>
       </select>
       <br>
     </div>
