--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       <div id="answer_myself"></div>
     </div>
     <div style="display: inline-block; vertical-align: top;">
-      <h5 id='dd_opponent' style="color: white">到你了弟弟(tips: 对方不会回答第三种类型的单词)</h5>
+      <h5 id='dd_opponent' style="color: white">到你了弟弟(tips: 对方不会回答第三种类型的单词，不参与计算)</h5>
       <h3>对方的回答</h3>
 
       <div id="answer_opponent"></div>
