word library updated (No.506~753)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div style="display:inline-block">
     <h1 style="display: inline-block;">一个顶俩v0.4</h1>
-    <div style="display: inline-block;">词库更新（No.506~753）历史版本：<a href="history/3.html">v0.3</a>
+    <div style="display: inline-block;">词库更新（No.506~753）历史版本：<a href="history/1.html">v0.1</a><a href="history/2.html">v0.2</a>
       <a href="https://bbs.nga.cn/read.php?tid=19152993">帮助兼反馈帖</a></div>
 
     <div id="save">
